# MegaTunixRedux

./: .clang-format  .gitignore  AGENTS.md  ANALYSIS_SUMMARY.md  AUTHORS  AUTOTUNING_AI_ROADMAP.md  BUILD_SUCCESS_SUMMARY.md  BUILD_SYSTEM_EVALUATION.md  CLEANUP_SUMMARY.md  CMakeLists.txt  CROSS_PLATFORM_IMPLEMENTATION_SUMMARY.md  CURRENT_STATUS.md  CURRENT_STATUS_ANALYSIS.md  CURSOR_IMPROVEMENTS_SUMMARY.md  CURSOR_TODO.md  Dockerfile  ECU_PROTOCOL_ANALYSIS.md  FINAL_CURSOR_IMPROVEMENTS.md  FONT_DISTRIBUTION_GUIDE.md  GTK4_MODERNIZATION_PROGRESS.md  GTK4_PORTING_STATUS.md  INI_PARSER_IMPLEMENTATION_SUMMARY.md  LICENSE_ATTRIBUTION.md  MODERNIZATION_COMPLETE.md  MODERNIZATION_PLAN.md  MODERNIZATION_PROGRESS.md  MODERNIZATION_SUMMARY.md  NEXT_AGENT_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  README.md  REFACTORING_PROGRESS.md  SPEEDUINO_INTEGRATION_COMPLETE.md  SPEEDUINO_README.md  STRATEGIC_IMPLEMENTATION_COMPLETE.md  TODO.md  TODO_LIST.md  TROUBLESHOOTING.md  build_cross_platform.sh  connecting_feedback_fix_summary.md  connection_feedback_summary.md  (+35 more)
dashdesigner/: events.c  meson.build
gaugedesigner/: README  handlers.c  meson.build
include/: 3d_vetable.h  builder_compat.h  combo_mask.h  config_compat.h  core_gui.h  dashboard.h  debugging.h  defines.h  ecu_detector.h  ecu_manager.h  ecu_types.h  getfiles.h  globals.h  gtk_compat.h  megatunix_redux.h  meson.build  modern_opengl.h  modern_widgets.h  network_security.h  plugin_system.h  security_utils.h  serial_utils.h  speeduino_bridge.h  speeduino_plugin.h  tabloader.h  test_framework.h  xmlbase.h
include/app/: window_manager.h
include/automation/: action_triggers.h  macro_engine.h
include/core/: data_bridge.h
include/data/: datalog_manager.h
include/ecu/: ecu_communication.h  ecu_dynamic_protocols.h
include/io/: export_import.h
include/plugin/: plugin_interface.h  plugin_manager.h
include/ui/: ecu_integration.h  imgui_communications.h  imgui_key_bindings.h  imgui_runtime_display.h  imgui_ve_table.h
include/utils/: logging.h
legacy/: CMakeLists.txt  README.md
legacy/include/dashboard/: dashboard.h
legacy/include/diagnostics/: diagnostics.h
legacy/include/ecu/: ecu_ini_parser.h
legacy/include/integrations/: gps_provider.h
legacy/include/ui/: imgui_file_dialog.h  imgui_ve_table.h  keybindings_prefs.h  logging_system.h  settings_manager.h  settings_ui.h  table_operations.h  ui_theme_manager.h  undo_redo.h  ve_table_editor.h
legacy/src/: TODO  main.c  main.cpp
legacy/src/automation/: action_triggers.c
legacy/src/dashboard/: dashboard.c
legacy/src/data/: datalog_manager.c
legacy/src/diagnostics/: diagnostics.c
legacy/src/ecu/: ecu_dynamic_protocols.c
legacy/src/ui/: imgui_communications.cpp  imgui_runtime_display.c  imgui_runtime_display.cpp  imgui_ve_table.c  logging_system.cpp  settings_manager.cpp  undo_redo.c  ve_table_editor.cpp
legacy/src/utils/: config.c  logging.c
mtxcommon/: getfiles.c  meson.build  xmlbase.c
mtxmatheval/: matheval.c  meson.build  xmath.h  yywrap.c
native/: CMakeLists.txt  README.md
plugins/ecu/: CMakeLists.txt  test_plugin.cpp
plugins/ecu/sample_ecu/: CMakeLists.txt  sample_ecu.cpp
plugins/ecu/speeduino_plugin/: CMakeLists.txt  speeduino_plugin.cpp
plugins/visualization/chart_plugin/: CMakeLists.txt  chart_plugin.cpp
src/: 3d_vetable.c  README  about_gui.c  builder_compat.c  combo_loader.c  conversions.c  core_gui.c  core_gui_modern.c  dashboard.c  datalogging_gui.c  ecu_detector.c  ecu_manager.c  gui_handlers.c  init.c  logviewer_gui.c  lookuptables.c  main.c  main.cpp  meson.build  modern_opengl.c  modern_widgets.c  mtx_application.c  network_demo.c  network_security.c  notifications.c  offline.c  personalities.c  plugin.c  plugin_system.c  rtv_processor.c  runtime_status.c  security_utils.c  serial_utils.c  speeduino_bridge.c  speeduino_bridge_new.c  speeduino_plugin.c  stubs.c  tabloader.c  test_framework.c  visibility.c  (+1 more)
src/app/: window_manager.c
src/automation/: macro_engine.c
src/core/: data_bridge.cpp
src/ecu/: ecu_communication.c  ecu_ini_parser.c
src/integrations/: gps_provider.c
src/io/: export_import.c
src/plugin/: plugin_manager.cpp
src/plugins/: README
src/plugins/libreems/: libreems_gui_handlers.c
src/plugins/ms1/: ms1_gui_handlers.c
src/plugins/ms2/: ms2_gui_handlers.c
src/plugins/mscommon/: 2d_table_editor.c  mscommon_gui_handlers.c
src/ui/: ecu_integration.cpp  imgui_file_dialog.cpp  imgui_key_bindings.c  imgui_ve_table.c  keybindings_prefs.c  settings_ui.c  table_operations.cpp  ui_theme_manager.cpp
tests/: CMakeLists.txt  README.md  meson.build  minimal_test_app  minimal_test_app.c  speeduino_serial_test  speeduino_serial_test.c  speeduino_test_harness  speeduino_test_harness.c  test_main.c  test_speeduino_plugin.c
tests/communication/: capture_tunerstudio  capture_tunerstudio.c
tests/ecu/: ini_parser_test  ini_parser_test.c
tests/hardware/: run_speeduino_test.sh  test_real_speeduino.sh  test_speeduino_hardware.sh
tests/integration/: test_ecu_communication.sh  test_realtime_streaming.sh  test_speeduino_direct  test_speeduino_direct.c  test_speeduino_enhanced  test_speeduino_enhanced.c  test_speeduino_protocol  test_speeduino_protocol.c  test_speeduino_simple  test_speeduino_simple.c  test_termios_speeduino  test_termios_speeduino.c
tests/misc/: simple_test  simple_test.c  test_clay  test_clay.c  test_clay_debug  test_clay_minimal.c  test_clay_simple
tests/speeduino/: speeduino_aggressive  speeduino_aggressive_read.c  speeduino_crc_test  speeduino_crc_test.c  speeduino_debug  speeduino_debug.c  speeduino_dual  speeduino_dual_protocol.c  speeduino_final_test  speeduino_final_test.c  speeduino_ini_test  speeduino_ini_test.c  speeduino_listen  speeduino_listen.c  speeduino_official_test  speeduino_official_test.c  speeduino_proper  speeduino_proper.c  speeduino_simple_test  speeduino_simple_test.c  speeduino_test  speeduino_test.c  speeduino_ts_envelope  speeduino_ts_envelope.c  speeduino_tunerstudio  speeduino_tunerstudio.c  test_speeduino  test_speeduino.c
widgets/: gauge.h  meson.build
(+136 files in other folders)
