include_headers = [
  'include',
  '.',
]

# Install headers
install_headers([
  'core_gui.h',
  'defines.h',
  'enums.h',
  'debugging.h',
  'init.h',
  'notifications.h',
  'widgetmgmt.h',
  'dashboard.h',
  'gui_handlers.h',
  'modern_widgets.h',
  'security_utils.h',
  'modern_opengl.h',
  'network_security.h',
  'plugin_system.h',
  'test_framework.h',
  'speeduino_plugin.h',
  'serial_utils.h',
  # Add more headers as needed
], subdir : 'megatunix-redux')
